--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import warnings\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold, cross_val_score\n",
-    "from sklearn.preprocessing import KBinsDiscretizer, OneHotEncoder, StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from xgboost import XGBClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, roc_auc_score\n",
     "from sklearn.metrics import classification_report, RocCurveDisplay, ConfusionMatrixDisplay\n",
@@ -2869,7 +2864,7 @@
     "plt.barh(importance_gb['Feature'], importance_gb['Importance'], color='b')\n",
     "plt.xlabel('Importance Score')\n",
     "plt.title('Feature Importance Gradient Boosting')\n",
-    "plt.gca().invert_yaxis()  #\n",
+    "plt.gca().invert_yaxis()  \n",
     "plt.show()"
    ]
   },
