--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -673,23 +673,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "<ul>\n",
-    "  <li><strong>ID:</strong> ID of the customer</li>\n",
-    "  <li><strong>Age:</strong> Age of the customer in completed years</li>\n",
-    "  <li><strong>Experience:</strong> Amount of work experience in years</li>\n",
-    "  <li><strong>Income:</strong> Amount of annual income (in thousands)</li>\n",
-    "  <li><strong>Zipcode:</strong> Postal code in which the client lives</li>\n",
-    "  <li><strong>Family:</strong> Number of family members</li>\n",
-    "  <li><strong>CCAvg:</strong> Average monthly spending with the credit card (in thousands)</li>\n",
-    "  <li><strong>Education:</strong> Education level (1: bachelor's degree, 2: master's degree, 3: advanced/professional degree)</li>\n",
-    "  <li><strong>Mortgage:</strong> Value of home mortgage, if any (in thousands)</li>\n",
-    "  <li><strong>Securities Account:</strong> Does the customer have a securities account with the bank?</li>\n",
-    "  <li><strong>CD Account:</strong> Does the customer have a certificate of deposit account (CD) with the bank?</li>\n",
-    "  <li><strong>Online:</strong> Does the customer use the internet banking facilities?</li>\n",
-    "  <li><strong>CreditCard:</strong> Does the customer use a credit card issued by the bank?</li>\n",
-    "  <li><strong>Personal Loan:</strong> Did this customer accept the personal loan offered in the last campaign? (Target Variable)</li>\n",
-    "</ul>\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "<table border=\"1\" cellpadding=\"10\" cellspacing=\"0\">\n",
+    "  <thead>\n",
+    "    <tr>\n",
+    "      <th><strong>Variable Name</strong></th>\n",
+    "      <th><strong>Description</strong></th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <td><strong>ID</strong></td>\n",
+    "      <td>ID of the customer</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Age</strong></td>\n",
+    "      <td>Age of the customer in completed years</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Experience</strong></td>\n",
+    "      <td>Amount of work experience in years</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Income</strong></td>\n",
+    "      <td>Amount of annual income (in thousands)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Zipcode</strong></td>\n",
+    "      <td>Postal code in which the client lives</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Family</strong></td>\n",
+    "      <td>Number of family members</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>CCAvg</strong></td>\n",
+    "      <td>Average monthly spending with the credit card (in thousands)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Education</strong></td>\n",
+    "      <td>Education level (1: bachelor's degree, 2: master's degree, 3: advanced/professional degree)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Mortgage</strong></td>\n",
+    "      <td>Value of home mortgage, if any (in thousands)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Securities Account</strong></td>\n",
+    "      <td>Does the customer have a securities account with the bank?</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>CD Account</strong></td>\n",
+    "      <td>Does the customer have a certificate of deposit account (CD) with the bank?</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Online</strong></td>\n",
+    "      <td>Does the customer use the internet banking facilities?</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>CreditCard</strong></td>\n",
+    "      <td>Does the customer use a credit card issued by the bank?</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td><strong>Personal Loan</strong></td>\n",
+    "      <td>Did this customer accept the personal loan offered in the last campaign? (Target Variable)</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
     "</p>\n"
    ]
   },
@@ -1092,39 +1142,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 305,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       2/80\n",
-       "1       0/50\n",
-       "2       0/10\n",
-       "3       0/10\n",
-       "4       1/50\n",
-       "        ... \n",
-       "3995    0/20\n",
-       "3996    1/50\n",
-       "3997    2/70\n",
-       "3998    1/00\n",
-       "3999    0/90\n",
-       "Name: CCAvg, Length: 4000, dtype: object"
-      ]
-     },
-     "execution_count": 305,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['CCAvg'] "
+    "<h2 style=\"text-align: center; font-family: 'Times New Roman';\">2. DATA CLEANING</h2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font face=\"Times New Roman\" size=\"4\">\n",
+    "- Transform CCAvg column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1178,38 @@
        "Name: CCAvg, Length: 4000, dtype: float64"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['CCAvg'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2.8\n",
+       "1       0.5\n",
+       "2       0.1\n",
+       "3       0.1\n",
+       "4       1.5\n",
+       "       ... \n",
+       "3995    0.2\n",
+       "3996    1.5\n",
+       "3997    2.7\n",
+       "3998    1.0\n",
+       "3999    0.9\n",
+       "Name: CCAvg, Length: 4000, dtype: float64"
+      ]
+     },
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,15 +1225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"text-align: center; font-family: 'Times New Roman';\">2. DATA CLEANING</h2>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
-    "Check negative values in Experience and remove noise"
+    "- Check negative values in Experience and remove noise"
    ]
   },
   {
@@ -1257,7 +1315,7 @@
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
-    "Drop ID column"
+    "- Drop ID column"
    ]
   },
   {
@@ -1274,7 +1332,7 @@
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
-    " Remove outliers from mortgage using Z-score"
+    "- Remove outliers from mortgage using Z-score"
    ]
   },
   {
@@ -1321,7 +1379,7 @@
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
-    "Drop ZIP code and date columns"
+    "- Drop ZIP code "
    ]
   },
   {
@@ -1331,6 +1389,14 @@
    "outputs": [],
    "source": [
     "df.drop(['ZIP Code'], axis= 1, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font face=\"Times New Roman\" size=\"4\">\n",
+    "- Drop Date"
    ]
   },
   {
@@ -1347,7 +1413,7 @@
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
-    "Remove missing values in education filling with the most frequent value of records having the same income"
+    "- Remove missing values in education filling with the most frequent value of records having the same income"
    ]
   },
   {
@@ -1371,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -1386,31 +1452,20 @@
     }
    ],
    "source": [
-    "# fig, ax = plt.subplots(4, 3, figsize=(12, 20))\n",
-    "# for i, col in enumerate(df):\n",
-    "#     sns.histplot(df[col], ax= ax[i//3, i%3])\n",
-    "# plt.show()\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Define the columns to be plotted\n",
     "columns = ['Age', 'Experience', 'Income', 'Family', 'CCAvg', 'Education',\n",
     "           'Mortgage', 'Personal Loan', 'Securities Account', 'CD Account',\n",
     "           'Online', 'CreditCard', 'Constant column', 'Random column']\n",
     "\n",
-    "# Create subplots (5 rows, 3 columns), which gives 15 subplots (1 extra to remove later)\n",
+    "\n",
     "fig, ax = plt.subplots(5, 3, figsize=(15, 25))\n",
     "\n",
-    "# Iterate through the columns and plot the histograms\n",
+    "\n",
     "for i, col in enumerate(columns):\n",
     "    sns.histplot(df[col], ax=ax[i//3, i%3])\n",
     "    ax[i//3, i%3].set_title(col)\n",
     "\n",
-    "# Remove the extra unused subplot (the 15th subplot)\n",
-    "fig.delaxes(ax[4, 2])\n",
     "\n",
-    "# Adjust layout and display the plot\n",
+    "fig.delaxes(ax[4, 2])\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
@@ -1709,7 +1764,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center; font-family: 'Times New Roman';\">4. MODELS</h2>\n"
+    "<h1 style=\"text-align: center; font-family: 'Times New Roman';\">4. MODELS</h2>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
+    "In this analysis ech model will be evaluated as follows:\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
+    "- TRAINING\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
+    "- TESTING\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
+    "- EVALUATION of the performance using some key metrics ike: \n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "    Confusion Matrix: To understand how many instances were correctly or incorrectly classified in each category.\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "    Accuracy: The proportion of correct predictions out of the total predictions.\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "    Precision: The proportion of true positive predictions out of all positive predictions made by the model.\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "    Recall: The proportion of true positive predictions out of all actual positives in the data.\n",
+    "\n",
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "    F1 Score: The harmonic mean of precision and recall, providing a balanced evaluation of model performance.\n"
    ]
   },
   {
@@ -2496,6 +2585,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font face=\"Times New Roman\" size=\"4\">\n",
+    "\n",
+    "---\n",
+    "### Model evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 334,
    "metadata": {},
@@ -2793,7 +2892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center; font-family: 'Times New Roman';\">Random Forest</h1>"
+    "<h1 style=\"text-align: center; font-family: 'Times New Roman';\">4.2 RANDOM FOREST</h1>"
    ]
   },
   {
@@ -3538,7 +3637,7 @@
    "metadata": {},
    "source": [
     "<h1 style=\"text-align: center; font-family: 'Times New Roman';\"\n",
-    ">Gradient Boosting</h1>\n"
+    ">4.3 GRADIENT BOOSTING</h1>\n"
    ]
   },
   {
@@ -4617,6 +4716,16 @@
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=\"4\">\n",
+    "CCAvg demonstrates the greatest variability in its SHAP values, with both high and low values influencing the predictions.\n",
+    "Furthermore, notable variation is evident in the Securities and CD Accounts.\n",
+    "The variability of features such as Family and Credit Card is limited, reflecting their minimal role in the predictions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font face=\"Times New Roman\" size=\"4\">\n",
     "\n",
     "---\n",
     "### SHAP Values for Gradient Boosting"
@@ -4674,6 +4783,16 @@
     "plt.title(\"SHAP Summary Plot for Gradient Boosting (Feature Names)\")\n",
     "shap.summary_plot(shap_values_gb, X_test, feature_names=X_test.columns)  \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font face=\"Times New Roman\" size=\"4\">\n",
+    "The variables with the greatest variability in SHAP values are income, CCAvg and education, which demonstrates their significant impact on the range of predictions.\n",
+    "There is a moderate degree of variability evident in the Family and CD Account variables.\n",
+    "The Online and Constant columns demonstrate minimal variability, which serves to reinforce their limited role in the predictions."
    ]
   },
   {
