added new comments

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1773,38 +1773,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "In this analysis ech model will be evaluated as follows:\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "- TRAINING\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "- TESTING\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "- EVALUATION of the performance using some key metrics ike: \n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
-    "    Confusion Matrix: To understand how many instances were correctly or incorrectly classified in each category.\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
-    "    Accuracy: The proportion of correct predictions out of the total predictions.\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
-    "    Precision: The proportion of true positive predictions out of all positive predictions made by the model.\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
-    "    Recall: The proportion of true positive predictions out of all actual positives in the data.\n",
-    "\n",
-    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
-    "    F1 Score: The harmonic mean of precision and recall, providing a balanced evaluation of model performance.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h2 style=\"text-align: center; font-family: 'Times New Roman';\">4.1 LOGISTIC REGRESSION</h2>\n"
    ]
   },
@@ -1867,6 +1835,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
+    "A confusion matrix is a table used to evaluate the performance of a classification model. It compares the actual labels with the predicted labels, showing how well the model is classifying the data.\n",
+    "<ul>\n",
+    "  <li><strong>True Positives (TP):</strong> Correctly predicted positive cases (bottom-right: 76).</li>\n",
+    "  <li><strong>True Negatives (TN):</strong> Correctly predicted negative cases (top-left: 662).</li>\n",
+    "  <li><strong>False Positives (FP):</strong> Incorrectly predicted positives (top-right: 46), also known as \"Type I error.\"</li>\n",
+    "  <li><strong>False Negatives (FN):</strong> Incorrectly predicted negatives (bottom-left: 16), also known as \"Type II error.\"</li>\n",
+    "</ul>\n",
+    "</p>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 326,
    "metadata": {},
@@ -1894,8 +1877,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"font-family: 'Times New Roman'; font-size: 16px;\">\n",
+    "1. <strong>Accuracy</strong>:<br>\n",
+    "Measures the proportion of correct predictions (both true positives and true negatives) out of all predictions.<br>\n",
+    "Formula: \n",
+    "<pre>\n",
+    "Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "</pre>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = accuracy_score(y_test, y_pred_logreg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "2. <strong>Precision</strong>:<br>\n",
+    "Measures the proportion of true positives out of all positive predictions made by the model.<br>\n",
+    "Formula: \n",
+    "<pre>\n",
+    "Precision = TP / (TP + FP)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = precision_score(y_test, y_pred_logreg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "3. <strong>Recall</strong>:<br>\n",
+    "Measures the proportion of true positives out of all actual positive cases in the dataset.<br>\n",
+    "Formula: \n",
+    "<pre>\n",
+    "Recall = TP / (TP + FN)\n",
+    "</pre>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall = recall_score(y_test, y_pred_logreg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "4. <strong>F1 Score</strong>:<br>\n",
+    "The harmonic mean of precision and recall, providing a balance between the two.<br>\n",
+    "Formula: \n",
+    "<pre>\n",
+    "F1 Score = 2 * (Precision * Recall) / (Precision + Recall)\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1 = f1_score(y_test, y_pred_logreg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "5. <strong>ROC AUC</strong>:<br>\n",
+    "Measures the model’s ability to distinguish between classes by calculating the area under the ROC curve, which plots the true positive rate (recall) against the false positive rate.<br>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roc_auc_logreg = roc_auc_score(y_test, pipeline_logreg.predict_proba(X_test)[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
@@ -1962,19 +2052,12 @@
        "4    ROC AUC  0.952714"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 444,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy = accuracy_score(y_test, y_pred_logreg)\n",
-    "precision = precision_score(y_test, y_pred_logreg)\n",
-    "recall = recall_score(y_test, y_pred_logreg)\n",
-    "f1 = f1_score(y_test, y_pred_logreg)\n",
-    "roc_auc_logreg = roc_auc_score(y_test, pipeline_logreg.predict_proba(X_test)[:, 1]\n",
-    ")\n",
-    "\n",
     "metrics_table = pd.DataFrame({\n",
     "    'Metric': ['Accuracy', 'Precision', 'Recall', 'F1 Score', 'ROC AUC'],\n",
     "    'Score': [accuracy, precision, recall, f1, roc_auc_logreg]\n",
