--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1089,15 +1089,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "This table summarizes the main statistical characteristics of the dataset using the <code>describe()</code> method. The <strong>count</strong> column shows how many non-null values each feature has, confirming that most features have 4000 entries, except for <strong>Education</strong> with 3900. The <strong>mean</strong> gives the average for each column, while <strong>std</strong> shows the standard deviation, representing variability. The <strong>min</strong>, <strong>25%</strong>, <strong>50%</strong>, <strong>75%</strong>, and <strong>max</strong> provide insights into the distribution of the data, including the range (min to max) and the quartiles (25th, 50th, and 75th percentiles), which describe how data is spread. Notably, some columns (like <strong>Securities Account</strong>, <strong>Personal Loan</strong>, <strong>CD Account</strong>) appear binary (0/1 values), while others like <strong>Income</strong> and <strong>Mortgage</strong> show significant variation.\n",
-    "</p>\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 303,
    "metadata": {},
@@ -1467,7 +1458,7 @@
     "\n",
     "fig.delaxes(ax[4, 2])\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1494,10 +1485,10 @@
    "metadata": {},
    "source": [
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "The bar chart demonstrates the relationship between specific features and the probability of a customer accepting a personal loan. The most significant correlation is with income, indicating that customers with higher income levels are more likely to accept a personal loan. Similarly, there is a strong positive correlation between CCAvg (average credit card spending) and the likelihood of a customer accepting a loan. This suggests that those who spend more on their credit cards are more likely to take out a loan.<br><br>\n",
+    "The bar chart demonstrates the relationship between specific features and the probability of a customer accepting a personal loan: the most significant correlation is with income, indicating that customers with higher income levels are more likely to accept a personal loan. Similarly, there is a strong positive correlation between CCAvg (average credit card spending) and the likelihood of a customer accepting a loan, suggesting that those who spend more on their credit cards are more likely to take out a loan.<br><br>\n",
     "Other features, such as CD Account, Mortgage, and Education, demonstrate moderate correlations, though their influence is less pronounced in comparison to Income and CCAvg. Meanwhile, features such as Family, Securities Account, and Online Banking have weaker correlations, indicating a less significant relationship with loan acceptance.<br><br>\n",
-    "At the lower end of the spectrum, there is minimal correlation between CreditCard, Age, Experience, and the Random column. This suggests that these factors are unlikely to influence a customer's decision to accept a personal loan. The chart demonstrates that income and CCAvg are the most significant factors in predicting loan acceptance.\n",
-    "</p>\n"
+    "There is minimal correlation between CreditCard, Age, Experience, and the Random column. This suggests that these factors are unlikely to influence a customer's decision to accept a personal loan. \n",
+    "</p>"
    ]
   },
   {
@@ -1553,10 +1544,9 @@
    "metadata": {},
    "source": [
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "The heat map provides a visual representation of the pairwise correlations between the numeric features in the dataset: the colour intensity and values in each cell indicate the strength of the correlation, with a value of -1 indicating a perfect negative correlation and a value of +1 indicating a perfect positive correlation.<br><br>\n",
-    "The diagonal line represents a perfect correlation (1.00) between each feature and itself. There is a strong correlation between age and experience (0.99), indicating that these two factors likely provide similar information. Income demonstrates a moderate positive correlation with CCAvg (0.64), Personal Loan (0.50), and CD Account (0.18), underscoring its significance in predicting loan acceptance and its relationship with other financial behaviours.<br><br>\n",
+    "The heat map provides a visual representation of the pairwise correlations between the numeric features in the dataset: the diagonal line represents a perfect correlation (1.00) between each feature and itself. There is a strong correlation between age and experience (0.99), indicating that these two factors likely provide similar information. Income demonstrates a moderate positive correlation with CCAvg (0.64), Personal Loan (0.50), and CD Account (0.18), underscoring its significance in predicting loan acceptance and its relationship with other financial behaviours.<br><br>\n",
     "The strongest correlation is between Personal Loan and Income (0.50) and CCAvg (0.37), which corroborates the earlier finding that customers with higher incomes and more credit card usage are more likely to accept a loan. There is a weaker, but still positive correlation with the CD account (0.34).<br><br>\n",
-    "As anticipated, the random column shows no meaningful relationships with other features, as it was generated for testing purposes. The Constant column is not correlated with any features, as it contains the same value for all entries.<br><br>\n",
+    "As anticipated, the random column shows no meaningful relationships with other features, as well as the Constant column, which is not correlated with any features.<br><br>\n",
     "</p>\n"
    ]
   },
@@ -1598,7 +1588,7 @@
    "metadata": {},
    "source": [
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "The features (all columns except for 'Personal Loan') will be used as input variables, while the target (y) represents the output we want to predict—whether a customer accepted the personal loan.\n",
+    "The features will be used as input variables, while the target ('Personal Loan') represents the output we want to predict—whether a customer accepted the personal loan.\n",
     "</p>"
    ]
   },
@@ -1645,8 +1635,8 @@
    "metadata": {},
    "source": [
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "In order to address the significant imbalance in the target variable, Personal Loan, this analysis employed oversampling. The majority class (customers who did not accept the loan) had 3616 samples, while the minority class (customers who accepted the loan) had only 384 samples. Oversampling is an effective method for addressing this imbalance by increasing the number of samples in the minority class (those who accepted the loan). This is achieved by randomly replicating samples from the minority class in order to match or come closer to the number of samples in the majority class. Consequently, the model will learn from a more balanced dataset and be less prone to predicting the majority class.\n",
-    "</p>\n"
+    "In order to address the significant imbalance in the target variable, Personal Loan, this analysis employed oversampling. The majority class (customers who did not accept the loan) had 3616 samples, while the minority class (customers who accepted the loan) had only 384 samples: oversampling is an effective method for addressing this imbalance by increasing the number of samples in the minority class (those who accepted the loan). This is achieved by randomly replicating samples from the minority class in order to match or come closer to the number of samples in the majority class. Consequently, the model will learn from a more balanced dataset and be less prone to predicting the majority class.\n",
+    "</p>"
    ]
   },
   {
@@ -1781,10 +1771,10 @@
    "metadata": {},
    "source": [
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "<strong>Logistic Regression</strong> is a statistical method used for binary classification problems, where the goal is to predict the probability of a binary outcome (in this case, whether a customer will accept a personal loan or not). Unlike linear regression, which predicts a continuous outcome, logistic regression outputs a probability that is then mapped to a binary label (0 or 1) using a threshold (typically 0.5).\n",
+    "<strong>Logistic Regression</strong> is a statistical method used for binary classification problems, where the goal is to predict the probability of a binary outcome (in this case, whether a customer will accept a personal loan or not). The model outputs a probability that is then mapped to a binary label (0 or 1) using a threshold (typically 0.5).\n",
     "</p>\n",
     "<p style=\"font-family: 'Times New Roman'; font-size: 20px;\">\n",
-    "In the code, a logistic regression model is built using a pipeline. The pipeline has two main steps:\n",
+    "In the code, a logistic regression model is built using a pipeline which has two main steps:\n",
     "1. <strong>StandardScaler</strong>: This scales the features, ensuring that they have zero mean and unit variance, which is important for many machine learning models, including logistic regression, to perform optimally.\n",
     "2. <strong>LogisticRegression</strong>: This is the classifier that will predict whether a customer will accept a loan or not.\n",
     "</p>\n"
@@ -4894,7 +4884,7 @@
     "---\n",
     "### Load new data (September)\n",
     "\n",
-    "In this step, we load the new, unseen data for the month of September. This data includes features such as age, income, family size, and other financial indicators for potential customers. We will use this data to make predictions using the best model selected during training."
+    "In this step, we load the new, unseen data for the month of September. We will use this data to make predictions using the best model selected during training and testing."
    ]
   },
   {
@@ -5078,7 +5068,7 @@
     "<font face=\"Times New Roman\" size=\"4\">\n",
     "\n",
     "---\n",
-    "### Make predictions using best model chosen during training "
+    "### Make predictions using best model "
    ]
   },
   {
